# gic-cbs

./: .gitignore  Dockerfile  LICENSE  README.md  coverage.xml  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
.github/workflows/: ci.yml
docs/: Assumptions.rst  Contributing.rst  Future Improvements.rst  Pipeline.rst  Setup.rst  Tests.rst  Usage.rst  api_reference.rst  conf.py  index.rst  tests_reference.rst
gic-cbs/: README.md  pyproject.toml  requirements.txt  setup.py
gic-cbs/docs/: conf.py
gic-cbs/src/: __init__.py  main.py
gic-cbs/tests/: test_main.py
infra/: k8s-deployment.yaml  main.tf
src/: booking.py  booking_advanced.py  check_booking.py  logger.py  main.py  movie.py  movie_classes.py  validation.py
tests/: test_booking.py  test_booking_advanced.py  test_check_booking.py  test_end_to_end.py  test_logger.py  test_main.py  test_movie.py  test_validation.py
