[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=xml"
[tool.poetry]
name = "gic-cbs"
version = "0.1.0"
description = "A Python project for GIC CBS"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"